
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BS ;
 int die (char*) ;
 int printf (char*,char*) ;
 scalar_t__ send (int,char*,int ,int ) ;
 int sleep (int) ;
 int snprintf (char*,int,char*,char*) ;
 int strlen (char*) ;

void login(char *user, char *pass, int sock)
{
    char ubuf[BS], pbuf[BS];

    snprintf(ubuf, BS - 1, "USER %s\r\n", user);
    ubuf[BS - 1] = 0;
    snprintf(pbuf, BS - 1, "PASS %s\r\n", pass);
    pbuf[BS - 1] = 0;

    sleep(1);
    if (send(sock, ubuf, strlen(ubuf), 0) < 0)
 die("send");
    sleep(1);
    if (send(sock, pbuf, strlen(pbuf), 0) < 0)
 die("send");
    sleep(1);
    printf("Logged in as %s\n", user);
}
